# compare_communication_workflows

./: .envrc  README.md  flake.nix  mailing_list_candidates.csv  mailing_list_downloader.py  manual_check.csv  pyproject.toml  query.py  repo-matching.ipynb  tokens.py
data/2012/: 2012-01-01  2012-01-02  2012-01-03
